package com.pucrs.port;

import java.util.List;

public abstract class Schedule {
    public List<String> weekdays; //seg, ter
    public List<String> time; //AB, CD
}
