package com.pucrs.alocacaorecursos.alocacaorecursos.domain;

public class ClassroomEntity{

private String id;
private String building;
private int capacity;
private String type;

public String getId() {
    return id;
}
public void setId(String id) {
    this.id = id;
}
public String getBuilding() {
    return building;
}
public void setBuilding(String building) {
    this.building = building;
}
public int getCapacity() {
    return capacity;
}
public void setCapacity(int capacity) {
    this.capacity = capacity;
}
public String getType() {
    return type;
}
public void setType(String type) {
    this.type = type;
}


}

