package com.pucrs.alocacaorecursos.alocacaorecursos.domain;

public class LectureGroupEntity {
    private String id;

    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }

    
}
