@startuml alocacao-recurso

package Entities{ 

class Student{
 - String:  id
 - String:  name
 - String:  course
 - int:     age
 - String:  cpf
 - int:     semester
 + String:  getId()
 + String:  getName()
 + String:  getCourse()
 + int:     getAge()
 + String:  getCpf()
 + String:  getSemester()
 + void:    setId()
 + void:    setName()
 + void:    setCourse()
 + void:    setAge()
 + void:    setCpf()
 + void:    setSemester()
}
class Professor{
 - String: id
 - String: name
 - int:    age
 - String: cpf
 - String: area
 + String: getId()
 + String: getName()
 + String: getCpf() 
 + String: getArea()
 + int:    getAge()
 + void:   setId()
 + void:   setName()
 + void:   setCpf() 
 + void:   setArea()
 + void:   setAge()

}
class Lecture{
 - String: id
 - String: name 
 - String: content
 + String: getId()
 + String: getName() 
 + String: getContent() 
 + void:   setId()
 + void:   setName() 
 + void:   setContent()   
}
class Classroom{
 - String: id
 - String: building 
 - int:    capacity 
 - String: type  
 + String: getId()
 + String: getBuilding() 
 + int:    getCapacity()
 + String: getType()  
 + String: setId()
 + String: setBuilding() 
 + int:    setCapacity() 
 + String: setType()  

}
class LectureGroup{
 - String: id  
 + String: getId() 
 + String: setId()
}
}

package Association{

class Enrollment{
 - LectureGroup: lectureGroup
 - Student: student
 + String: getLectureGroupId()
 + String: getStudentId()
 
}

class LectureRegister{
- Professor: professor
- LectureGroup: lectureGroup
- Lecture: lecture
+ String: getLectureGroupId()
+ String: getProfessorId()
+ String: getLectureId()

}

class Schedule{
- Classroom: classroom   
- LectureGroup: lectureGroup
- String: time 
- String: date
+ String: getLectureGroupId()
+ String: getClassroomId()
+ String: getTime()
+ String: getDate()
}

}

package UserStories{

}

LectureRegister --> "many" Professor
LectureRegister --> Lecture 
LectureRegister --> "many" LectureGroup 

Enrollment --> "many" LectureGroup
Enrollment --> "1" Student

Schedule --> "many" LectureGroup
Schedule --> "1" Classroom

@enduml